# alphabots_rpa

./: .dockerignore  .env.example  .gitignore  Dockerfile  POC_TODO.md  README.md  RPA_Developer_task Emir Yılmaz.docx  VALIDATION_REPORT.md  docker-compose.yml  pyproject.toml  requirements.txt  run_4shard.py  test_detail_strategies.py  test_strategies.py
docker/: entrypoint.sh
scripts/: run_sharded_25_vendor.ps1
src/: __init__.py  __main__.py  config.py  main.py  models.py
src/domain/: exceptions.py  manifest.py  results.py
src/graphify-out/: .graphify_analysis.json  (+2 more)
tests/: test_adaptive_wait.py  test_browser.py  test_category_traversal.py  test_classification.py  test_cleaning.py  test_dashboard.py  test_detail_enrichment_tool.py  test_detail_page_classification.py  test_domain_exceptions.py  test_domain_results.py  test_fallback_fields.py  test_fetchers.py  test_merge_runs.py  test_new_modes.py  test_output.py  test_parser_fixtures.py  test_parsers.py  test_pipeline.py  test_regional_scraper.py  test_run_4shard.py  test_run_manifest.py  test_runtime_config.py  test_state_store.py  test_uc_popup_adaptive_integration.py  test_validate_dashboard.py  test_vehicle_detail_merge.py  test_vendor_scraper.py
tools/: combined_audit_observer.py  detail_lab.py  detail_lab2.py  detail_lab3.py  detail_lab4.py  detail_lab5.py  detail_lab6.py  detail_lab7.py  detail_lab_uc_popup_pipeline_test.py  detail_observer.py  detail_observer2.py  detail_observer_live.py  detail_observer_live_v2.py  enrich_vehicle_details.py  investigate_vendor.py  merge_runs.py  validate_dashboard.py
(+47 files in other folders)
